# python-envoy-authz

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .woodpecker.yaml  Dockerfile  build.sh  k8s.yaml  pyproject.toml  renovate.json
docs/superpowers/plans/: 2026-05-18-integration-tests.md
docs/superpowers/specs/: 2026-05-18-integration-tests-design.md
envoy_authz/: app.py
tests/: conftest.py
tests/integration/: test_check.py  test_health.py  test_setup.py
